# kiout-test-backend

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  create_superuser.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requests.http
kiout_test_backend/: asgi.py  settings.py  urls.py  wsgi.py
workers/: admin.py  models.py  permissions.py  resourse.py  serializers.py  views.py
workers/migrations/: 0001_initial.py  0002_alter_worker_created_by.py  0003_alter_worker_email_alter_worker_last_name_and_more.py
workers/test/: test_workers.py
